added loading screen for market price updates

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -30,3 +30,12 @@ body {
 .cost-table{
   width: 80rem;
 }
+
+.update-market-message{
+  font-size: 3rem;
+}
+
+.testing{
+  display: flex;
+  flex-direction: column;
+}
