Added a gold per tap column to cost table

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -43,5 +43,26 @@ body {
 .table-combination-image{
   position: relative;
   top: 10px;
+  
 }
 
+.table-combination-image-gold {
+  position: relative;
+  bottom: 10px;
+  left: 35px;
+}
+
+.table-combination-header-image{
+  position: relative;
+  left: 10px;
+}
+
+.table-combination-header-image-destruction {
+  position: relative;
+  left: 10px;
+}
+
+.table-combination-header-image-guardian {
+  position: relative;
+ 
+}
