--- a/src/style/index.css
+++ b/src/style/index.css
@@ -46,11 +46,11 @@ body {
   
 }
 
-.table-combination-image-gold {
+/* .table-combination-image-gold {
   position: relative;
   bottom: 10px;
   left: 35px;
-}
+} */
 
 .table-combination-header-image{
   position: relative;
