--- a/src/style/index.css
+++ b/src/style/index.css
@@ -78,3 +78,12 @@ max-width: auto;
 #outlined-basic{
   color: white
 }
+
+.select-label{
+  color: white;
+}
+
+.testing123123{
+  display: flex;
+  flex-direction: row;
+}
